--- a/index.html
+++ b/index.html
@@ -1,15 +1,99 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hugh Miller: R Project Portfolio</title>
-</head>
-<body>
-    <a href="HousingPrices.html">Housing Prices Model</a>
-    <a href="CarSellingPrice.html">Car Selling Price Model Model</a>
-    <a href="byubaseball.html">Utah Baseball Players Data Analysis</a>
-    <a href="itsabouttime.html">Business Time Series Data Analysis</a>
-    <a href="semesterproject.html">NFL QBs Data Analysis</a>
-</body>
+<!DOCTYPE HTML>
+<!--
+	Forty by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>My R Portfolio</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
+
+		<!-- Wrapper -->
+			<div id="wrapper">
+
+				<!-- Banner -->
+					<section id="banner" class="major">
+						<div class="inner">
+							<header class="major">
+								<h1>Hugh Miller: R Portfolio</h1>
+							</header>
+							<div class="content">
+								<p>A showcase of projects I have done with the R programming language.</p>
+								<ul class="actions">
+									<li><a href="#one" class="button next scrolly">Get Started</a></li>
+								</ul>
+							</div>
+						</div>
+					</section>
+
+				<!-- Main -->
+					<div id="main">
+
+						<!-- One -->
+							<section id="one" class="tiles">
+								<article>
+									<span class="image">
+										<img src="images/pic01.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="HousingPrices.html" class="link">Housing Prices Model</a></h3>
+										<p>The is a high dimensional linear regression model I created for a Kaggle competition. The goal is to
+											 create a model that can accurately predict housing prices for homes in Iowa.</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="images/pic02.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="CarSellingPrice.html" class="link">Car Selling Price Model</a></h3>
+										<p>This is a linear regression analysis done to help me 
+											decide how much I should sell my car for based on the current mileage.</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="images/pic03.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="semesterproject.html" class="link">NFL QB Analysis</a></h3>
+										<p>This project is an analysis of how well NFL quarterbacks
+											 perform based on which round they were selected in the draft.</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="images/pic04.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="byubaseball.html" class="link">Utah Baseball Players Analysis</a></h3>
+										<p>This is an analysis of baseball players who played in Utah school at the college level
+											 and which school from Utah is best at producing successful players at the professional level.</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="images/pic05.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="itsabouttime.html" class="link">Small Business Analysis</a></h3>
+										<p>This project works with time series data. The financial performace of a number of local businesses
+											 is analyzed in order to make a decision on which one should be given a loan.</p>
+									</header>
+								</article>
+						
+							</section>
+
+						
+
+
+			</div>
+
+	</body>
 </html>
